# fastapi-sample-practice

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  tasks.py
alembic/: env.py
alembic/versions/: 0010bc73c52e_messages.py  7a1bd08e6c4f_groups.py  8fee61d83268_rooms.py  9ee75a0ee88d_create_user.py  a2cde970dd16_message_threads.py
fastapi_sample/: main.py
fastapi_sample/config/: database.py  jwt_config.py
fastapi_sample/cruds/: __init__.py  member.py  message.py  room.py  thread.py  user.py
fastapi_sample/dependencies/: database.py
fastapi_sample/models/: __init__.py  member.py  message.py  room.py  thread.py  user.py
fastapi_sample/routers/: authentication.py  messages.py  rooms.py  users.py  users_rooms.py
fastapi_sample/schemas/: core.py  member.py  message.py  room.py  thread.py  user.py
fastapi_sample/services/: __init__.py  authentication.py  exceptions.py
fastapi_sample/services/member/: create_member.py  delete_member.py  join_member.py  update_read_time.py
fastapi_sample/services/message/: create_message.py  get_message_by_room_and_message_id.py  get_messages_by_room_id.py  (+2 more)
fastapi_sample/utils/: pagination.py  password.py
test/: conftest.py
test/cruds/: test_member_repository.py  test_message_repository.py  test_room_repository.py  test_thread_repository.py  test_user_repository.py
test/fastapi_sample_utils/: test_pagination.py  test_password.py
test/models/: test_users.py
test/routes/: test_authentication.py  test_messages.py  test_rooms.py  test_users.py  test_users_room.py
test/utils/: utils.py
(+5 files in other folders)
