[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Daisuke Higashi <daisuke.mik@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
SQLAlchemy = {extras = ["mypy"], version = "1.4.28"}
pydantic = {extras = ["dotenv","email"], version = "^1.8.2"}
PyJWT = "^2.1.0"
alembic = "^1.6.5"
PyMySQL="^1.0.2"
python-multipart="^0.0.5"
passlib={extras=["bcrypt"],version = "^1.7.4"}
httpx="^0.16.1"
asgi-lifespan="^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.5b2"
isort = "^5.10.1"
mypy = "^0.910"
pytest = "^6.2.5"
invoke = "^1.6.0"
requests = "^2.26.0"
pytest-env = "^0.6.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = "alembic/versions"
